--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_llvm_executable(taucc taucc.cpp)
-set_property(TARGET taucc PROPERTY CXX_STANDARD 20)
-target_link_libraries(taucc PRIVATE clangTooling)
+add_llvm_executable(tau-cc taucc.cpp)
+set_property(TARGET tau-cc PROPERTY CXX_STANDARD 20)
+target_link_libraries(tau-cc PRIVATE clangTooling)
