--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_llvm_executable(tau-cc taucc.cpp)
 set_property(TARGET tau-cc PROPERTY CXX_STANDARD 20)
-target_link_libraries(tau-cc PRIVATE clangTooling)
+target_link_libraries(tau-cc PRIVATE
+  clangTooling
+  MLIRIR)
