Introduce a basic AIRGenerator

--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_tau_executable(tau-cc taucc.cpp)
 
 target_link_libraries(tau-cc PRIVATE
+  tauFrontendClang
   clangTooling
   MLIRIR)
+
+install(TARGETS tau-cc
+  RUNTIME DESTINATION bin)
