Rename tau-cc cpp file

--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_tau_executable(tau-cc taucc.cpp)
+add_tau_executable(tau-cc tau-cc.cpp)
 
 target_link_libraries(tau-cc PRIVATE
   tauFrontendClang
