--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -2,8 +2,7 @@ add_tau_executable(tau-cc tau-cc.cpp)
 
 target_link_libraries(tau-cc PRIVATE
   tauFrontendClang
-  clangTooling
-  MLIRIR)
+  clangTooling)
 
 install(TARGETS tau-cc
   RUNTIME DESTINATION bin)
