Add the first concept of a checker

--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -2,7 +2,9 @@ add_tau_executable(tau-cc tau-cc.cpp)
 
 target_link_libraries(tau-cc PRIVATE
   tauFrontendClang
-  clangTooling)
+  tauCheckers
+  clangTooling
+  MLIRPass)
 
 install(TARGETS tau-cc
   RUNTIME DESTINATION bin)
