Implement post-order enumerator for basic blocks

--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -3,6 +3,7 @@ add_tau_executable(tau-cc tau-cc.cpp)
 target_link_libraries(tau-cc PRIVATE
   tauFrontendClang
   tauCheckers
+  tauCore
   clangTooling
   MLIRPass)
 
