Extract some fronend interfaces out of tau-cc

--- a/lib/Frontend/Clang/CMakeLists.txt
+++ b/lib/Frontend/Clang/CMakeLists.txt
@@ -2,6 +2,7 @@ add_tau_library(
   tauFrontendClang
   AIRGenAction.cpp
   AIRGenerator.cpp
+  Clang.cpp
 )
 target_link_libraries(
   tauFrontendClang
