Force unittests to build when running the command

--- a/unittests/Core/CMakeLists.txt
+++ b/unittests/Core/CMakeLists.txt
@@ -4,4 +4,7 @@ add_tau_unittest(CoreTests
 target_link_libraries(CoreTests
   PRIVATE
   tauCore
+  tauFrontendClang
+  clangTooling
+  MLIRPass
   )
