Add a very basic test for flow-sensitive checks

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -1,5 +1,9 @@
 add_custom_target(unittests)
 add_dependencies(check unittests)
-add_dependencies(unittests test)
+add_custom_command(
+  TARGET unittests
+  COMMENT "Run unit-tests"
+  POST_BUILD
+  COMMAND ctest --output-on-failure)
 
 add_subdirectory(Core)
