Migrate to Catch2

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -1,9 +1,11 @@
 add_custom_target(unittests)
 add_dependencies(check unittests)
 add_custom_command(
+  COMMAND ${CMAKE_COMMAND} -E echo "Running unit-tests"
+  COMMAND ctest --output-on-failure
+  VERBATIM
+  PRE_BUILD
   TARGET unittests
-  COMMENT "Run unit-tests"
-  POST_BUILD
-  COMMAND ctest --output-on-failure)
+  )
 
 add_subdirectory(Core)
