Add some basic unit-tests for TopoOrderEnumerator

--- a/unittests/Core/CMakeLists.txt
+++ b/unittests/Core/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_tau_unittest(CoreTests
-  FlowSensitiveTest.cpp)
+  FlowSensitiveTest.cpp
+  TopoOrderEnumeratorTest.cpp
+  )
 
 target_link_libraries(CoreTests
   PRIVATE
