--- a/lib/Frontend/Clang/CMakeLists.txt
+++ b/lib/Frontend/Clang/CMakeLists.txt
@@ -8,6 +8,8 @@ target_link_libraries(
   tauFrontendClang
   PRIVATE
   tauAir
-  MLIRStandard
   immer
+  MLIRArithmeticDialect
+  MLIRControlFlowDialect
+  MLIRFuncDialect
 )
