Fix incorrect AIR deps

--- a/include/tau/AIR/CMakeLists.txt
+++ b/include/tau/AIR/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_mlir_dialect(AirOps air)
+add_mlir_doc(AirDialect AirDialect AIR/ -gen-dialect-doc)
 add_mlir_doc(AirOps AirOps AIR/ -gen-op-doc)
