--- a/lib/AIR/CMakeLists.txt
+++ b/lib/AIR/CMakeLists.txt
@@ -5,7 +5,7 @@ add_mlir_dialect_library(tauAir
   AirTypes.cpp
 
   ADDITIONAL_HEADER_DIRS
-  ${PROJECT_SOURCE_DIR}/include/Air
+  ${PROJECT_SOURCE_DIR}/include/tau/AIR
 
   DEPENDS
   MLIRAirOpsIncGen
