Implement a simple type constrained address-taken points-to

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -5,6 +5,7 @@ add_tau_library(tauCore
   CheckerRegistry.cpp
   FlowSensitive.cpp
   PostOrderEnumerator.cpp
+  PointsToAnalysis.cpp
   TopoOrderEnumerator.cpp
   State.cpp
 )
