--- a/unittests/Core/CMakeLists.txt
+++ b/unittests/Core/CMakeLists.txt
@@ -2,6 +2,7 @@ add_tau_unittest(CoreTests
   AddressTakenAnalysisTest.cpp
   CheckerTest.cpp
   FlowSensitiveTest.cpp
+  PointsToAnalysisTest.cpp
   TopoOrderEnumeratorTest.cpp
   )
 
