Implement basic LSE simplification
Load-store elimination is a simplification that allows us to track
values and treat many pointers transparently.

--- a/lib/Driver/CMakeLists.txt
+++ b/lib/Driver/CMakeLists.txt
@@ -4,6 +4,7 @@ target_link_libraries(tau-cc PRIVATE
   tauFrontendClang
   tauCheckers
   tauCore
+  tauSimplification
   clangTooling
   MLIRPass)
 
