--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(Checkers)
 add_subdirectory(Core)
 add_subdirectory(Driver)
 add_subdirectory(Frontend)
+add_subdirectory(Simplification)
