--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
+      - name: Install GCC
+        if: runner.os == 'Linux'
+        run: |
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test && \
+          sudo apt-get update && \
+          sudo apt-get -y install gcc-12 g++-12 && \
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 12 && \
+          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 12
       - name: Check LLVM cache
         uses: actions/cache@v2
         id: cache-llvm-deps
@@ -38,6 +46,11 @@ jobs:
         with:
           version: 15
           directory: .llvm
+      - name: Set downloaded Clang as CC/CXX
+        if: runner.os == 'macOS'
+        run: |
+          echo "CC=${{ github.workspace }}/.llvm/bin/clang" >> $GITHUB_ENV && \
+          echo "CXX=${{ github.workspace }}/.llvm/bin/clang++" >> $GITHUB_ENV
       - run: pip3 install lit
       - run: cmake . -DTAU_CLANG_PATH=.llvm -DCMAKE_BUILD_TYPE=${{ matrix.configuration }} -Bbuild -G Ninja
       - run: ninja check
