Migrate to LLVM 18.1.8

--- a/lib/Frontend/Clang/CMakeLists.txt
+++ b/lib/Frontend/Clang/CMakeLists.txt
@@ -9,7 +9,7 @@ target_link_libraries(
   PRIVATE
   tauAir
   immer
-  MLIRArithmeticDialect
+  MLIRArithDialect
   MLIRControlFlowDialect
   MLIRFuncDialect
 )
