--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,6 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-12
           - ubuntu-22.04
         configuration:
           - Release
@@ -26,12 +25,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
-      - name: Install GCC
+      - name: Install deps
         if: runner.os == 'Linux'
         run: |
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test && \
           sudo apt-get update && \
-          sudo apt-get -y install gcc-12 g++-12 && \
+          sudo apt-get -y install gcc-12 g++-12 libncurses5 && \
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-12 12 && \
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-12 12
       - name: Check LLVM cache
@@ -39,12 +38,12 @@ jobs:
         id: cache-llvm-deps
         with:
           path: .llvm
-          key: llvm-deps-${{ matrix.os }}-15
+          key: llvm-deps-${{ matrix.os }}-18
       - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v1
+        uses: KyleMayes/install-llvm-action@v2
         if: steps.cache-llvm-deps.outputs.cache-hit != 'true'
         with:
-          version: 15
+          version: "18.1.8"
           directory: .llvm
       - name: Set downloaded Clang as CC/CXX
         if: runner.os == 'macOS'
