Improve MemoryStore and add tests

--- a/unittests/Core/CMakeLists.txt
+++ b/unittests/Core/CMakeLists.txt
@@ -2,6 +2,7 @@ add_tau_unittest(CoreTests
   AddressTakenAnalysisTest.cpp
   CheckerTest.cpp
   FlowSensitiveTest.cpp
+  MemoryStoreTest.cpp
   PointsToAnalysisTest.cpp
   ReachingDefsTest.cpp
   TopoOrderEnumeratorTest.cpp
@@ -9,6 +10,7 @@ add_tau_unittest(CoreTests
 
 target_link_libraries(CoreTests
   PRIVATE
+  immer
   tauCore
   tauFrontendClang
   clangTooling
