Implement CFG mutual exclusivity analysis

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -7,6 +7,7 @@ add_tau_library(tauCore
   EscapeAnalysis.cpp
   FlowSensitive.cpp
   MemoryStore.cpp
+  MutualExclusionAnalysis.cpp
   PointsToAnalysis.cpp
   PostOrderEnumerator.cpp
   ReachingDefs.cpp
