Implement topological event linearization

--- a/unittests/Core/CMakeLists.txt
+++ b/unittests/Core/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_tau_unittest(CoreTests
   AddressTakenAnalysisTest.cpp
   CheckerTest.cpp
+  EventLinearizationTest.cpp
   FlowSensitiveTest.cpp
   MemoryStoreTest.cpp
   MutualExclusionAnalysisTest.cpp
