--- a/ui/trace-viewer/package.json
+++ b/ui/trace-viewer/package.json
@@ -11,10 +11,10 @@
     "@types/node": "^16.18.113",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
+    "@xyflow/react": "^12.3.2",
     "dagre": "^0.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-flow-renderer": "^10.3.17",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
